erDiagram
    profiles ||--o{ registrations : "user_id"
    profiles ||--o{ user_roles : "user_id"
    profiles ||--o{ strava_tokens : "user_id"
    profiles ||--o{ club_members : "user_id"
    profiles ||--o{ orders : "user_id"
    profiles ||--o{ user_notifications : "user_id"
    challenges ||--o{ challenge_tickets : "challenge_id"
    challenges ||--o{ challenge_milestones : "challenge_id"
    challenges ||--o{ registrations : "challenge_id"
    challenges ||--o{ orders : "challenge_id"
    registrations ||--o{ activity_logs : "registration_id"
    registrations ||--o{ user_milestones : "registration_id"
    challenge_milestones ||--o{ milestone_media : "milestone_id"
    challenge_milestones ||--o{ user_milestones : "milestone_id"
    clubs ||--o{ club_members : "club_id"
    clubs ||--o{ club_social_links : "club_id"
    coupons ||--o{ orders : "coupon_id"
    payment_gateways ||--o{ orders : "gateway_id"
    strava_tokens ||--o{ strava_sync_runs : "user_id"
    strava_tokens ||--o{ strava_webhook_events : "athlete_id"
